webadmin: search completion fixes
- Fixed issue where auto completion was not working when
  there was a complex default search string like for users
  or disks.
- Fixed issue where the auto completion drop down was not
  overlapping buttons due to z-index being too low.

Bug-Url: https://bugzilla.redhat.com/1529507

er the commit message for your changes. Lines starting

--- a/frontend/brands/ovirt-brand/src/main/sass/_gwt-standard.scss
+++ b/frontend/brands/ovirt-brand/src/main/sass/_gwt-standard.scss
@@ -681,6 +681,7 @@ modified and overridden.
 }
 .gwt-SuggestBoxPopup {
   margin-left: 3px;
+  z-index: 2 !important;
 }
 .gwt-SuggestBoxPopup .item {
   padding: 2px 6px;
